[project]
name = "SRA_helper"
version = "0.1.5"
description = "Helper Functions for Site Response Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
